app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xonotic-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xonotic-ui
  template:
    metadata:
      labels:
        app: xonotic-ui
    spec:
      containers:
      - name: x-leaderboard
        image: "gcr.io/group1-6m11/x-leaderboard:v0.02"
        ports:
        - containerPort: 8080
