app/deploy-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: xonotic-ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: xonotic-ui
